<resources>
    <string name="app_name">NewApplication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="memory">Memory</string>
    <string name="memory_desc1">
        Welcome to Poker Card Match, where memory meets the cards!
        Let the matching begin!
    </string>
    <string name="memory_desc2">
        You’ll have 15 seconds to remember the cards
        and 15 seconds to choose a specific card
    </string>
    <string name="play">Play</string>
    <string name="level">Level %s</string>
    <string name="start">Start</string>
    <string name="check">Check</string>
    <string name="Continue">Continue</string>
    <string name="try_again">Try again</string>
    <string name="timeup">Time\'s up…</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Incorrect…</string>
    <string name="last_memory_game_dialog">See results</string>
    <string name="results">Results</string>
    <string name="result_desc">You’ve passed %s/%s levels</string>
    <string name="back_to_memory">Back to memory</string>
    <string name="see_results">See results</string>
    <string name="memory_task_base">Remember where the %s </string>
    <string name="memory_task_level1">ace of the cross is located</string>
    <string name="memory_task_level2">two of diamonds is located</string>
    <string name="memory_task_level3">King of hearts is located</string>
    <string name="memory_task_level4">four of hearts is located</string>
    <string name="memory_task_level5">eight of diamonds is located</string>
    <string name="memory_task_level6">queen of spades is located</string>
    <string name="memory_task_level7">King of diamonds is located</string>
    <string name="memory_task_level8">two of cross is located</string>
    <string name="memory_timer">00:%s</string>
</resources>