<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/a"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/memory_fall_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medium"
        android:text="@string/incorrect"
        android:textAllCaps="true"
        android:textColor="@color/b"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/memory_game_continueBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            android:background="@color/a"
            android:fontFamily="@font/medium"
            android:foreground="@drawable/card_border_selected"
            android:gravity="center"
            android:paddingHorizontal="56dp"
            android:paddingVertical="8dp"
            android:text="@string/Continue"
            android:textAllCaps="false"
            android:textColor="@color/b"
            android:textSize="15sp" />

        <Button
            android:id="@+id/memory_game_againBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:background="@color/b"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:paddingHorizontal="56dp"
            android:paddingVertical="8dp"
            android:text="@string/try_again"
            android:textAllCaps="false"
            android:textColor="@color/a"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>