<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/a"
    android:foreground="@drawable/c"
    android:foregroundGravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.chihuahua.pokereducation.ui.fragments.memory.MemoryResultsFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/medium"
        android:text="@string/results"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/b"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/memory_resultsTV"
        app:layout_constraintEnd_toEndOf="@+id/memory_resultsTV"
        app:layout_constraintStart_toStartOf="@+id/memory_resultsTV" />

    <TextView
        android:id="@+id/memory_resultsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/medium"
        android:text="@string/result_desc"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/memory_game_resultBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/b"
        android:fontFamily="@font/medium"
        android:paddingHorizontal="56dp"
        android:paddingVertical="8dp"
        android:text="@string/back_to_memory"
        android:textAllCaps="false"
        android:textColor="@color/a"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="@+id/memory_resultsTV"
        app:layout_constraintStart_toStartOf="@+id/memory_resultsTV"
        app:layout_constraintTop_toBottomOf="@+id/memory_resultsTV" />
</androidx.constraintlayout.widget.ConstraintLayout>